# virtual_teacher

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  setup.sh
.github/workflows/: deploy_hf_space.yml
config/: llm_config.yaml
src/virtual_teacher/: __init__.py  crew.py  main.py
src/virtual_teacher/config/: agents.yaml  llm_config.yaml  tasks.yaml
src/virtual_teacher/llm/: indic_processor.py  llm_manager.py
src/virtual_teacher/tools/: custom_tool.py
src/virtual_teacher/utils/: __init__.py  audio_processor.py  document_processor.py  file_manager.py  response_store.py  utils.py
tests/: test_main_helpers.py
