[project]
name = "virtual_teacher"
version = "0.1.0"
description = "virtual_teacher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0"
]

[project.scripts]
virtual_teacher = "virtual_teacher.main:run"
run_crew = "virtual_teacher.main:run"
train = "virtual_teacher.main:train"
replay = "virtual_teacher.main:replay"
test = "virtual_teacher.main:test"
run_with_trigger = "virtual_teacher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
