
# pyproject.toml
[project]
name = "virtual_teacher"
version = "0.1.0"
description = "virtual_teacher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12,<3.13"

dependencies = [
  "pytesseract>=0.3.10",
  "opencv-python>=4.8.0",
  "Pillow>=10.0.0",
  "PyMuPDF>=1.23.0",
  "crewai==1.5.0",
  "gradio>=5.49.1",
  "gtts>=2.5.4",
  "ollama>=0.3.0",
  "langchain-ollama>=0.1.0",
  "transformers>=4.40.0",
  "torch>=2.0.0",
  "indic-nlp-library>=0.81",
  "indictrans==0.2.0",
  "ai4bharat-transliteration>=1.1.3",  
  "pyttsx3>=2.90",  
  "indic-nlp-library>=0.81",
  "transformers>=4.40.0",
  "litellm>=1.40.10",
]

[project.scripts]
virtual_teacher = "virtual_teacher.main:run"
run_crew = "virtual_teacher.main:run"
train = "virtual_teacher.main:train"
replay = "virtual_teacher.main:replay"
test = "virtual_teacher.main:test"
run_with_trigger = "virtual_teacher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
